--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,22 +1,18 @@
 @font-face {
-  font-family: "Vazir";
+  font-family: "IRANSansX";
 
-  src: url("/assets/fonts/Vazir.woff") format("woff");
+  src: url("../fonts/IRANSansX-Bold.woff") format("woff");
 }
-@font-face {
-  font-family: "Vazir";
-  src: url("/assets/fonts/Vazir.woff2") format("woff2");
-}
-.mockchat,
-.mockchat *,
-.mockchat *:after,
-.mockchat *:before {
-  box-sizing: border-box;
+::-webkit-scrollbar {
+  display: none;
 }
 * {
   padding: 0;
   margin: 0;
-  font-family: "Vazir";
+  box-sizing: border-box;
+}
+body {
+  font-family: "IRANSansX";
 }
 .mockchat {
   position: relative;
@@ -26,9 +22,11 @@
   height: auto;
   line-height: 1.25;
   perspective: 900px;
-  font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    "Helvetica", "Arial", sans-serif;
+}
+@media screen and (max-width: 768px) {
+  .mockchat {
+    max-width: 100%;
+  }
 }
 .mockchat .device {
   width: 100%;
@@ -40,7 +38,12 @@
   position: relative;
   background: #283747;
   transition: all 0.5s;
-  font-family: "Vazir";
+}
+@media screen and (max-width: 768px) {
+  .mockchat .device  {
+    max-width: 100%;
+    margin-top: -80px;
+  }
 }
 .mockchat .device:before {
   display: block;
@@ -100,9 +103,9 @@
 }
 .mockchat .reply {
   transform-origin: 100% 50%;
-  margin: 0.25em 0 0.25em 1.5em !important;
+  margin: 0.25em 0 0.25em 1em !important;
   width: calc(100% - 3em);
-  border-radius: 20px;
+  border-radius: 15px;
   position: relative;
   padding: 0.75em 1em;
   box-shadow: 0 1px 10px rgba(0, 0, 0, 0.08);
@@ -112,10 +115,9 @@
   animation: mockchat-reply-pop cubic-bezier(0, 0.81, 0.58, 1.2) 0.4s;
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
-  text-align: right;
+  text-align: right !important;
   transition: all 0.3s;
   max-height: 0;
-  font-family: "Vazir";
 }
 .mockchat .reply:nth-child(2n-1) {
   transform-origin: 0 50%;
@@ -124,7 +126,6 @@
   background: #1b2d4c;
   color: white;
   text-align: left;
-  font-family: "Vazir";
 }
 .mockchat .reply:nth-child(2n-1):after {
   display: block;
